# rust-ml-rknn

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
rknn-api-examples/: Cargo.toml  build.rs
rknn-api-examples/src/: main.rs
rknn-api-examples/src/examples/: common.rs  dynshape_inference.rs  mod.rs  utils.rs
rknn-api-sys/: Cargo.toml  build.rs
